# acropolis-backend

./: .gitignore  README.md  Untitled.drawio  app.db  app_2.db  architecture.drawio  configuration.py  pyproject.toml  runner.py
api/: main.py  schemas.py
data/weather_cache/icon-de/: collections.txt
data/weather_cache/icon-de/collections/: {"coords": "POINT(17.124839 48.163394)", "z": 2, "datetime": "2022-10-22T09:00:00", "parameter-name": "temperature", "f": "CoverageJSON"}.txt  {"coords": "POINT(17.124839 48.163394)", "z": 2, "datetime": "2022-10-24T03:00:00", "parameter-name": "temperature", "f": "CoverageJSON"}.txt
data/weather_cache/icon-de/collections/radius/: {"coords": "POINT(17.124839 48.163394)", "z": 2, "datetime": "2022-10-24T03:00:00", "parameter-name": "temperature", "f": "CoverageJSON"}.txt
database/: alembic.ini  db.py
database/models/: alerts.py  monitoring_rules.py  monitoring_runs.py
monitoring_service/: alerting.py  client.py  emails.py  evaluation.py  flow.py  utils.py  weather_client.py
